...
      const val MIN_VALUE = 1
      const val MAX_VALUE = 99
      const val COUNTER_MIN_MAX_SIZE = 38
      const val COUNTER_TEXT_SIZE = 24
      const val COUNTER_FONT_SIZE = 17
      const val RECIPE_COUNTER_PADDING = 0
      const val REMOVE = "removeServings"
      const val NUMBER = "numberServings"
      const val ADD = "addServings"
    }

    object EditFridgeItemScreen {
      const val TITLE_LINE_HEIGHT = 28
      const val TITLE_FONT_SIZE = 24
      const val TEXT_FONT_SIZE = 20
...
      const val PREVIEW = "camera_preview"
    }

    object Utils {
      // PLATE SWIPE SCAFFOLD
      const val SEARCH_BAR = "searchBar"
      const val TOP_BAR = "topBar"
      const val TOP_BAR_TITLE = "topBarTitle"
      const val BACK_ARROW_ICON = "backArrowIcon"
      const val EDIT_ACCOUNT_ICON = "editAccountIcon"
      const val PLATESWIPE_SCAFFOLD = "plateSwipeScaffold"
      const val CHEF_HAT_ICON = "chefHatIcon"
      const val BOTTOM_BAR = "bottomNavigationMenu"
      const val TEST_TAG = "TagTestTag"
    }

    object SwipePage {
      const val FILTER = "filter"
      const val FILTER_ROW = "filterRow"
      const val TIME_RANGE_CHIP = "timeRangeChip"
      const val DIFFICULTY_CHIP = "difficultyChip"
      const val CATEGORY_CHIP = "categoryChip"
      const val RECIPE_IMAGE_1 = "recipeImage1"
      const val RECIPE_IMAGE_2 = "recipeImage2"
      const val DRAGGABLE_ITEM = "draggableItem"
      const val RECIPE_NAME = "recipeName"
      const val RECIPE_FRIDGE_INGREDIENTS = "recipeFridgeIngredients"
      const val RECIPE_FRIDGE_INGREDIENTS_TEXT = "recipeFridgeIngredientsText"
      const val VIEW_RECIPE_BUTTON = "viewRecipeButton"
      const val DELETE_SUFFIX = "Delete"
    }

    object RecipeOverview {
      const val DRAGGABLE_ITEM = "draggableItem"
      const val RECIPE_IMAGE = "recipeImage"
      const val RECIPE_TITLE = "recipeTitle"
      const val RECIPE_FRIDGE_INGREDIENTS = "recipeFridgeIngredients"
      const val RECIPE_FRIDGE_INGREDIENTS_TEXT = "recipeFridgeIngredientsText"
      const val INGREDIENTS_VIEW = "ingredientsView"
      const val INSTRUCTIONS_VIEW = "instructionsView"
      const val INGREDIENT_CHECKBOX = "checkboxIngredient"
      const val INGREDIENT_PREFIX = "ingredient"
      const val SLIDING_BUTTON_INGREDIENTS = "ingredientButton"
      const val SLIDING_BUTTON_INSTRUCTIONS = "instructionsButton"
      const val PREP_TIME_TEXT = "prepTimeText"
      const val COOK_TIME_TEXT = "cookTimeText"
      const val TOTAL_TIME_TEXT = "totalTimeText"
    }

    object RecipeList {
      const val RECIPE_LIST_TEST_TAG = "recipeList"
      const val RECIPE_CARD_TEST_TAG = "recipeCard"
      const val RECIPE_PRICE_RATING_TEST_TAG = "priceRating"
...
    }

    object CreateRecipeListInstructionsScreen {
      const val SCREEN_COLUMN = "ScreenColumn"
      const val INSTRUCTION_TEXT_SPACE = "InstructionTextSpace"
      const val INSTRUCTION_TEXT_IN_CARD = "InstructionTextInCard"
      const val INSTRUCTION_TIME = "InstructionTime"
      const val EDIT_INSTRUCTION_ICON = "EditInstructionIcon"
      const val INSTRUCTION_TEXT = "InstructionsText"
      const val RECIPE_NAME_TEXT = "RecipeNameText"
      const val INSTRUCTION_LIST = "InstructionList"
      const val INSTRUCTION_LIST_ITEM = "InstructionListItem"
      const val NEXT_STEP_BUTTON = "NextStepButton"
      const val RECIPE_LIST_INSTRUCTIONS_SCREEN_SPACER1 = "RecipeListInstructionsScreenSpacer1"
      const val RECIPE_LIST_ITEM_THUMBNAIL = "InstructionThumbnail"
      const val RECIPE_LIST_INSTRUCTION_ICON = "InstructionIcon"
      const val ADD_INSTRUCTION_BUTTON = "AddInstructionButton"
      const val ADD_ICON_DESCRIPTION = "Add"
      const val EDIT_ICON_DESCRIPTION = "Edit"
      const val STEP_ICON_DESCRIPTION = "Step"
    }

...
