...
                  start = OVERVIEW_INSTRUCTION_START.dp,
                  end = OVERVIEW_INSTRUCTION_END.dp,
                  top = OVERVIEW_INSTRUCTION_TOP.dp,
                  bottom = OVERVIEW_INSTRUCTION_BOTTOM.dp)
              .testTag(INSTRUCTIONS_VIEW)) {
        for (index in currentRecipe.instructions.indices) {
          InstructionValue(currentRecipe.instructions[index], index)
        }
      }
}

@Composable
fun InstructionValue(instruction: Instruction, index: Int) {
...
            verticalAlignment = Alignment.CenterVertically) {
              Image(
                  painter = painterResource(id = instruction.icon.iconResId),
                  contentDescription = "Icon",
                  modifier = Modifier.size(ICON_SIZE.dp).testTag("InstructionIcon"))

              Column(modifier = Modifier.testTag("InstructionInfo")) {
                Text(
                    modifier = Modifier.testTag("InstructionTitle"),
                    color = MaterialTheme.colorScheme.onPrimary,
                    text =
                        "${stringResource(R.string.RecipeListInstructionsScreen_Step)} ${officialStep}",
                    style = MaterialTheme.typography.bodyMedium,
                    fontWeight = FontWeight.Bold)

...
